added title, description, date for xkcd comic

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,13 @@
       </button>
     </form>
     <br>
+    <p> Title: <%= xkcdData.title %> <br>
+      Description: <%= xkcdData.alt %> <br>
+      Date (MMDDYYYY): <%= xkcdData.month %> <%= xkcdData.day %> <%= xkcdData.year %> <br>
+     </p>
+    <br>
     <img src="<%= xkcdData.img %>" alt="<%= xkcdData.alt %>" width="500" />
+    <br>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
